<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".AddNewPlantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_white_background">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/green_500"
                app:cardCornerRadius="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/outline_add_photo_alternate_24" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/choosePhotoTextView"
                style="@style/small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/change_plant_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <EditText
                android:id="@+id/plantNameEditText"
                style="@style/common_editText"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/plant_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choosePhotoTextView" />

            <EditText
                android:id="@+id/plant_species_edit_text"
                style="@style/common_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/species"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plantNameEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_white_background">

            <TextView
                android:id="@+id/wateringTextView"
                style="@style/normal_TextView"
                android:text="@string/watering"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/wateringSeekBar"
                style="@style/common_seekBar"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:progressDrawable="@drawable/watering_track"
                android:thumb="@drawable/outline_invert_colors_black_24"
                android:thumbTint="@color/blue_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/wateringDaysTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wateringTextView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/wateringDaysTextView"
                style="@style/seekBar_textView"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/_5_days"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/wateringSeekBar"
                app:layout_constraintTop_toBottomOf="@+id/wateringTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_white_background">

            <TextView
                android:id="@+id/fertilizingTextView"
                style="@style/normal_TextView"
                android:text="@string/fertilizing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/fertilizingSeekBar"
                style="@style/common_seekBar"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:progressDrawable="@drawable/fertilization_track"
                android:thumb="@drawable/outline_grain_24"
                android:thumbTint="@color/bronze_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fertilizingDaysTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fertilizingTextView" />

            <TextView
                android:id="@+id/fertilizingDaysTextView"
                style="@style/seekBar_textView"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fertilizingSeekBar"
                app:layout_constraintTop_toBottomOf="@+id/fertilizingTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_white_background">

            <TextView
                android:id="@+id/sprayingTextView"
                style="@style/normal_TextView"
                android:text="@string/spraying"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/sprayingSeekBar"
                style="@style/common_seekBar"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:progressDrawable="@drawable/rotation_track"
                android:thumb="@drawable/outline_shower_24"
                android:thumbTint="@color/green_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sprayingDaysTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sprayingTextView" />

            <TextView
                android:id="@+id/sprayingDaysTextView"
                style="@style/seekBar_textView"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sprayingSeekBar"
                app:layout_constraintTop_toBottomOf="@+id/sprayingTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_white_background">

            <TextView
                android:id="@+id/rotationTextView"
                style="@style/normal_TextView"
                android:text="@string/rotating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/rotationSeekBar"
                style="@style/common_seekBar"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:progressDrawable="@drawable/spraying_track"
                android:thumb="@drawable/outline_rotate_left_24"
                android:thumbTint="@color/yellow_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rotatingTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rotationTextView" />

            <TextView
                android:id="@+id/rotatingTextView"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/never"
                style="@style/seekBar_textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rotationSeekBar"
                app:layout_constraintTop_toBottomOf="@+id/rotationTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/custom_white_background">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_button_background"
                android:drawableEnd="@drawable/outline_add_circle_outline_white_24"
                android:paddingHorizontal="16sp"
                android:text="Edit plant!"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_delete_button_background"
                android:drawableEnd="@drawable/outline_not_interested_white_24"
                android:paddingHorizontal="16sp"
                android:text="Delete plant!"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/addButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>